# fbgram

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fbgram/: main.py
fbgram/browser/: __init__.py  browser.py
fbgram/cli/: app.py  grab.py  info.py  send.py  setup.py
fbgram/db/: db.py  models.py
fbgram/services/: grabber.py  parser.py
fbgram/telegram/: telegram.py
test/: test_browser.py  test_db.py  test_parser.py
